--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="container">
         <h2>Borang Permohonan Kad CIDB</h2>
-<form id="cidbApplicationForm"
-      action="https://script.google.com/macros/s/AKfycbz7ABAlZ3BeFQUG6L_aCtwC2VQ3Zxl5v62ZMMFrJFk2SGXRsAdeBsdhTlP6e-FPy0Ii/exec"
-      method="POST"
-      enctype="multipart/form-data"
-      target="_blank">
+        <form id="cidbApplicationForm" enctype="multipart/form-data"            
+        action="https://script.google.com/macros/s/AKfycbz7ABAlZ3BeFQUG6L_aCtwC2VQ3Zxl5v62ZMMFrJFk2SGXRsAdeBsdhTlP6e-FPy0Ii/exec"
+            method="POST"
+            enctype="multipart/form-data"
+            target="_blank">
 
             <fieldset>
                 <legend>Maklumat Peribadi & Syarikat</legend>
@@ -113,5 +113,6 @@
             <button type="submit">Hantar Permohonan & Buat Bayaran</button>
         </form>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
